# GrahamScan

./: .gitignore  GrahamScan.cabal
app/: GrahamScan.hs  Main.hs  Vector.hs
