cabal-version:      2.4
name:               GrahamScan
version:            0.1.0.0

-- A short (one-line) description of the package.
synopsis: Graham scan algorithm implementation

-- A longer description of the package.
-- description:

-- The package author(s).
author: Bohdan Pylypchenko

-- An email address to which users can send suggestions, bug reports, and patches.
maintainer: bogdan314ylypchenko@gmail.com

executable GrahamScan
    main-is:          Main.hs

    -- Modules included in this executable, other than Main.
    other-modules:    Vector GrahamScan

    -- LANGUAGE extensions used by modules in this package.
    -- other-extensions:
    build-depends:    base ^>=4.16.4.0
    hs-source-dirs:   app
    default-language: Haskell2010
